--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="layout.mobile.css">
     <link rel="stylesheet" href="layout.desktop.css">
 </head>
 
@@ -24,16 +25,19 @@
         </ul>
     </nav>
     <section class="hero" style="background-image: url(https://static.ghost.org/v1.0.0/images/blog-cover.jpg ); background-position: center;">
-        <h1>Ghost</h1>
-        <p>Thoughts stories and ideas</p>
+        <h1 style="margin: auto; text-align: center;">Ghost</h1>
+        <p style="margin: auto; text-align: center;"> Thoughts stories and ideas</p>
     </section>
+
+    <!-- new section -->
+
     <section class="first-section">
         <div>
             <img src="https://static.ghost.org/v3.0.0/images/welcome-to-ghost.png" alt="" style="width: 100%; height: auto;">
         </div>
-        <div style="display: flex; flex-direction: column; width: 75%; justify-content: space-around;">
+        <div class="para-layout">
             <h1>Welcome to Ghost</h1>
-            <p style="flex-grow: 1;">
+            <p style="flex-grow: 1; text-align: center;">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero dolorem praesentium, aspernatur deserunt totam maiores expedita recusandae pariatur minima porro fugit beatae distinctio reiciendis, molestiae quod similique illo ipsum fugiat! Lorem ipsum
                 dolor, sit amet consectetur adipisicing elit. Vero dolorem praesentium, aspernatur deserunt totam maiores expedita recusandae pariatur minima porro fugit beatae distinctio reiciendis, molestiae quod similique illo ipsum fugiat!
             </p>
@@ -50,6 +54,8 @@
             </div>
         </div>
     </section>
+
+    <!-- new section -->
 
     <section class="second-section">
         <div style="display: flex; flex-direction: column;">
